--- a/server/package.json
+++ b/server/package.json
@@ -2,8 +2,11 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "pg": "^8.10.0",
+    "postgres": "^3.3.4"
   },
   "name": "server",
   "version": "1.0.0",
